Add Elsa-Server setup guide and update related configurations
Created a new setup guide for Elsa-Server and updated related configurations for easier orientation. Other changes include revisions to "Elsa-Server.topic" and "Getting-Started.topic" for broader alignment and improved spotlight linking. A "snippets" directory was also added in "writerside.cfg" and the tree structure in "elsa.tree" was adjusted.

--- a/writerside/v3/Writerside/writerside.cfg
+++ b/writerside/v3/Writerside/writerside.cfg
@@ -7,4 +7,5 @@
     <categories src="c.list"/>
     <vars src="v.list"/>
     <instance src="elsa.tree" version="3.0"/>
+    <snippets dir="snippets" version="3.0"/>
 </ihp>
