Move 'MassTransit.topic' under 'Docker.topic'
The 'MassTransit.topic' has been moved from being a sub-topic under 'Library.topic' to be a sub-topic under 'Docker.topic' instead. This change better reflects its relevance and relationship to 'Docker.topic'.

--- a/writerside/v3/Writerside/writerside.cfg
+++ b/writerside/v3/Writerside/writerside.cfg
@@ -7,5 +7,6 @@
     <categories src="c.list"/>
     <vars src="v.list"/>
     <instance src="elsa.tree" version="3.0"/>
+    <instance src="lib.tree" web-path="/lib/" version="1.0"/>
     <snippets dir="snippets" version="3.0"/>
 </ihp>
