Disable tests, download only

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,10 +65,10 @@ jobs:
                 name: docs
                 path: artifacts
 
-            - name: Test documentation
-              uses: JetBrains/writerside-checker-action@v1
-              with:
-                instance: ${{ env.INSTANCE }}
+            #- name: Test documentation
+            #  uses: JetBrains/writerside-checker-action@v1
+            #  with:
+            #    instance: ${{ env.INSTANCE }}
 
     deploy:
         environment:
