--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,6 +82,7 @@ jobs:
               uses: actions/download-artifact@v3
               with:
                 name: docs
+                path: artifacts
 
             - name: Unzip artifact
               run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
