--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build documentation
+name: Build and Deploy Documentation
 
 on:
     push:
@@ -15,7 +15,7 @@ env:
     INSTANCE: writerside/elsa
     ARTIFACT: webHelpELSA2-all.zip
     # Writerside docker image version
-    DOCKER_VERSION: 232.10275
+    DOCKER_VERSION: 233.14389
 # Add the variable below to upload Algolia indexes
 # Replace HI with the ID of the instance in capital letters
 #    ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
@@ -60,7 +60,7 @@ jobs:
 
         steps:
             - name: Download artifacts
-              uses: actions/download-artifact@v1
+              uses: actions/download-artifact@v3
               with:
                 name: docs
                 path: artifacts
@@ -87,13 +87,13 @@ jobs:
               run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
 
             - name: Setup Pages
-              uses: actions/configure-pages@v2
+              uses: actions/configure-pages@v3
 
             - name: Upload artifact
-              uses: actions/upload-pages-artifact@v1
+              uses: actions/upload-pages-artifact@v3
               with:
                 path: dir
 
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v1
+              uses: actions/deploy-pages@v3
