--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,86 +15,58 @@ env:
     INSTANCE: writerside/elsa
     ARTIFACT: webHelpELSA2-all.zip
     # Writerside docker image version
-    DOCKER_VERSION: 233.14389
-# Add the variable below to upload Algolia indexes
-# Replace HI with the ID of the instance in capital letters
-#    ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+    DOCKER_VERSION: 242.21870
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-        steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
+      - name: Build Writerside docs using Docker
+        uses: JetBrains/writerside-github-action@v4
+        with:
+          instance: ${{ env.INSTANCE }}
+          artifact: ${{ env.ARTIFACT }}
+          docker-version: ${{ env.DOCKER_VERSION }}
 
-        - name: Build Writerside docs using Docker
-          uses: JetBrains/writerside-github-action@v4
-          with:
-            instance: ${{ env.INSTANCE }}
-            artifact: ${{ env.ARTIFACT }}
-            docker-version: ${{ env.DOCKER_VERSION }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs
+          path: |
+            artifacts/${{ env.ARTIFACT }}
+          retention-days: 7
 
-        - name: Upload documentation
-          uses: actions/upload-artifact@v3
-          with:
-            name: docs
-            path: |
-                artifacts/${{ env.ARTIFACT }}
-                artifacts/report.json
-            retention-days: 7
-
-# Add the step below to upload Algolia indexes
-        # - name: Upload algolia-indexes
-        #   uses: actions/upload-artifact@v3
-        #   with:
-        #     name: algolia-indexes
-        #     path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
-        #     retention-days: 7
-
-# Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
-    test:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     # Requires build job results
-        needs: build
-        runs-on: ubuntu-latest
+    needs: build
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Download artifacts
-              uses: actions/download-artifact@v3
-              with:
-                name: docs
-                path: artifacts
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docs
 
-            #- name: Test documentation
-            #  uses: JetBrains/writerside-checker-action@v1
-            #  with:
-            #    instance: ${{ env.INSTANCE }}
+      - name: Unzip artifact
+        run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
 
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        # Requires the build job results
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - name: Download artifact
-              uses: actions/download-artifact@v3
-              with:
-                name: docs
-                path: artifacts
+      - name: Setup Pages
+        uses: actions/configure-pages@v4.0.0
 
-            - name: Unzip artifact
-              run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: dir
 
-            - name: Setup Pages
-              uses: actions/configure-pages@v3
-
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                path: dir
-
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v3
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4.0.4
